-Refactored Backend-Bindings with DatabaseManager